<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="elfec_app_name">Elfec Lecturas</string>
    <string name="app_name">Elfec Lecturas</string>
    <string name="app_full_name">Elfec Lecturas v. %s</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_login">&#160;Ingreso al sistema</string>
    <string name="usuario_lbl">Usuario:</string>
    <string name="usuario_hint">usuario&#8230;</string>
    <string name="password_lbl">Password:</string>
    <string name="login_btn">Ingresar</string>
    <string name="creditos">Elfec Lecturas es una herramienta de propiedad exclusiva de la empresa.\nTodos los derechos reservados \u00AE</string>
    <string name="logo">Logo</string>
    <string name="fecha_no_cambiada">La fecha y hora no fueron cambiadas&#8230;</string>
    <string name="titulo_login_usuario">Validando usuario</string>
    <string name="login_usuario_msg">Se esta validando la información de usuario proporcionada, espere por favor&#8230;</string>
    <string name="titulo_cuadro_tarif">Cuadro tarifario incorrecto</string>
    <string name="cuadro_tarif_msg">Se encontraron datos en el telefono que corresponden a un cuadro tarifario que no es el actual, se eliminaran para poder proceder con el ingreso al sistema!</string>
    <string name="titulo_inicio">&#160;Inicio</string>
    <string name="nom_usuario_lbl">Usuario: </string>
    <string name="ruta_lbl">Ruta: </string>
    <string name="imei_lbl">IMEI: </string>
    <string name="salida_btn">Salir</string>
    <string name="menu_principal_btn">Menu principal</string>
    <string name="menu_principal_info">Presione menu principal para ingresar a las opciones de lecturas.</string>
    <string name="cargar_datos_btn">CARGAR DATOS</string>
    <string name="ruta_info_lbl">Ruta no asignada.</string>
    <string name="info_datos_no_cargados_lbl">Los datos no fueron cargados, no puede acceder al Menu Principal.</string>
    <string name="info_datos_cargados_lbl">Los datos ya fueron cargados.</string>
    <string name="datos_cargados_exito">Datos cargados exitosamente!</string>
    <string name="titulo_cargando_datos">Carga de datos</string>
    <string name="msg_confirm_import_data">Se procederá a iniciar el proceso de carga de datos ¿Desea continuar?</string>
    <string name="msg_inicializando_importacion">Inicializando la importación de datos del servidor&#8230;</string>
    <string name="msg_importando_parametrizables">Cargando parametrizables (SGC_MOVIL_PARAM)&#8230;</string>
    <string name="msg_importando_ordenativos">Cargando ordenativos (TIPOS_NOV_SUM)&#8230;</string>
    <string name="msg_importando_conceptos">Cargando conceptos (CONCEPTOS)&#8230;</string>
    <string name="msg_importando_conceptos_categ">Cargando categorias conceptos (CPTOS_CATEGORIAS)&#8230;</string>
    <string name="msg_importando_conceptos_tarifa">Cargando conceptos tarifas(CPTOS_CATEGORIAS)&#8230;</string>
    <string name="msg_importando_bases_calculo">Cargando bases de calculo (GBASES_CALC_IMP)&#8230;</string>
    <string name="msg_importando_bases_calculo_cptos">Cargando conceptos bases de calculo (GBASES_CALC_CPTOS)&#8230;</string>
    <string name="msg_importando_reclasif_categs">Cargando reclasificación de categorías (CATEG_RECLASIF)&#8230;</string>
    <string name="msg_importando_asignacion_rutas">Cargando asignación de rutas del usuario (USUARIO_ASIGNACION)&#8230;</string>
    <string name="msg_importando_lecturas">Cargando información de lecturas (LECTURAS)&#8230;</string>
    <string name="msg_importando_potencias">Cargando información de potencias de lecturas (LECTURASP)&#8230;</string>
    <string name="msg_importando_ev_consumos">Cargando evolución de consumos (LECTURASC)&#8230;</string>
    <string name="msg_importando_cptos_lecturas">Cargando conceptos de lecturas (LECTURASCONCEPTOS)&#8230;</string>
    <string name="msg_finalizando_importacion">Finalizando la carga de datos&#8230;</string>
    <string name="title_import_data_error">Error en la carga de datos</string>
    <string name="msg_data_imported_successfully">Se completó la carga de datos exitosamente!</string>
    <string name="descargar_datos_btn">DESCARGAR DATOS</string>
    <string name="descarga_inhabilitada">Aún no se completaron todas las lecturas, no puede descargar los datos</string>
    <string name="titulo_exportar_datos">Descarga de datos</string>
    <string name="msg_confirmar_exportacion">Se procederá a iniciar el proceso de descarga de datos, luego se eliminará toda la información local y se cerrará su sesión ¿Desea continuar?</string>
    <string name="msg_inicializando_exportacion">Inicializando la exportación de datos al servidor&#8230;</string>
    <string name="msg_exportando_lecturas">Descargando lecturas tomadas (SGC_MOVIL_LECTURAS)&#8230;</string>
    <string name="msg_exportando_lecturas_entre_lineas">Descargando lecturas entre lineas (SGC_MOVIL_LECT_ENTRE_LINEAS)&#8230;</string>
    <string name="msg_exportando_ordenativos">Descargando ordenativos de lecturas (SGC_MOVIL_ORDENATIVOS)&#8230;</string>
    <string name="msg_finalizando_exportacion">Finalizando la descarga de datos&#8230;</string>
    <string name="msg_exportacion_exitosa">Se completó la descarga de datos exitosamente!</string>
    <string name="titulo_error_exportacion">Error en la descarga de datos</string>
    <string name="titulo_eliminar_todos_los_datos">Eliminar todos los datos</string>
    <string name="datos_eliminados_error">Ocurrió un problema al eliminar los datos!</string>
    <string name="msg_restoring_route_assignments">Restaurando asignación de rutas&#8230;</string>
    <string name="msg_wiping_all_data">Eliminando toda la información local&#8230;</string>
    <string name="msg_wipe_all_data_confirm">Se procederá a restaurar el estado de todas las rutas, de todos los usuarios, que fueron importadas al teléfono. Luego se eliminará toda la información local y se cerrará su sesión, confirme si desea continuar!</string>
    <string name="title_wipe_all_data_errors">Error en la eliminación de datos</string>
    <string name="msg_all_data_wiped_successfully">Se eliminaron todos los datos locales exitosamente!</string>
    <string name="forzar_descarga_msg"><b>ADVERTENCIA:</b> Si fuerza la descarga se descargarán sólamente aquellas lecturas realizadas hasta este punto
        <i>(con estados: Leida, Impedida y Reintentar)</i>, lecturas entre líneas y ordenativos. 
        Nótese que no podrá continuar realizando las lecturas que tenga pendientes, 
            pues se eliminarán todos los datos locales y se cerrará su sesión. 
            Tampoco se podrán reasignar las lecturas que quedaron <b>Pendientes</b>
              <i>(para ello puede utilizar la opción de poner a Reintentar en cada lectura)</i>, 
           confirma que desea forzar la descarga?</string>
    <string name="titulo_forzar_descarga">Forzar descarga</string>
    <string name="eliminar_datos_msg">¡Se eliminaran todos los datos incluyendo los datos mensuales, diarios y lecturas realizadas!, después se cerrará su sesión</string>
    <string name="titulo_menu_principal">&#160;Menu principal</string>
    <string name="tomar_lecturas_btn">Tomar lecturas</string>
    <string name="resumen_lecturas_btn">Resumen lecturas</string>
    <string name="detalle_impedidas_btn">Detalle impedidas</string>
    <string name="detalle_lecturas_btn">Detalle lecturas</string>
    <string name="detalle_ordenativos_btn">Detalle ordenativos</string>
    <string name="detalle_entre_lineas_btn">Detalle entre lineas</string>
    <string name="tomar_lecturas_btn_info">comenzar a realizar lecturas o continuar desde donde estaba</string>
    <string name="resumen_lecturas_btn_info">ver resumen general</string>
    <string name="detalle_impedidas_btn_info">imprimir resumen imp.</string>
    <string name="detalle_lecturas_btn_info">imprimir resumen lec.</string>
    <string name="detalle_ordenativos_btn_info">imprimir lecturas con ordenativos</string>
    <string name="detalle_entre_lineas_btn_info">imprimir resumen</string>
    <string name="titulo_tomar_lecturas">&#160;Tomar lecturas</string>
    <string name="datos_cliente_lbl">Datos del cliente</string>
    <string name="nombre_lbl">Nombre: </string>
    <string name="direccion_lbl">Dirección: </string>
    <string name="nus_lbl">NUS: </string>
    <string name="orden_lbl">Orden: </string>
    <string name="cuenta_lbl">Cuenta: </string>
    <string name="tarifa_lbl">Tarifa: </string>
    <string name="datos_medidor_lbl">Datos del medidor</string>
    <string name="numero_lbl">Número: </string>
    <string name="estado_lbl">Estado: </string>
    <string name="info_digitos_lbl">El medidor es de %d dígitos</string>
    <string name="observacion_lbl">Observación: </string>
    <string name="nueva_lectura_lbl">Nueva lectura: </string>
    <string name="lectura_lbl">Lectura: </string>
    <string name="confirmar_lectura_btn">Confirmar</string>
    <string name="volver_al_menu_principal">Volver al menu principal</string>
    <string name="buscar_lectura">Buscar lectura</string>
    <string name="ir_ultimo">Ir a la ultima</string>
    <string name="ir_siguiente">Ir a la siguiente</string>
    <string name="ir_anterior">Ir a la anterior</string>
    <string name="ir_primero">Ir a la primera</string>
    <string name="mostrar_lista">Ver lista</string>
    <string name="postergar_lectura">Postergar</string>
    <string name="reintentar_lectura">Re-Lect.</string>
    <string name="bluetooth_no_encendido">No se encendió el bluetooth, note que no podrá seleccionar una impresora para imprimir.</string>
    <string name="servicios_ubicacion_apagados">Tiene que habilitar los sevicios de ubicación para poder tomar lecturas, activelos y luego presione atras para volver a la aplicación</string>
    <string name="bateria_nivel_critico">La batería está en un nivel muy bajo, se le recomienda apagar el GPS y los Datos Móviles 3G.</string>
    <string name="msg_debe_llenar_campos_lectura">Debe llenar el campo de la lectura para poder guardarla!</string>
    <string name="postergar_mensaje">Confirma que desea postergar la lectura?</string>
    <string name="reintentar_mensaje">Confirma que desea poner la lectura en estado para reintentarla al dia siguiente?</string>
    <string name="titulo_estimar_lectura">Estimar lectura</string>
    <string name="visualizar_potencia">Visualizar potencia</string>
    <string name="tomar_foto">Tomar fotogragía</string>
    <string name="modificar_lectura">Modificar lectura</string>
    <string name="filtrar_lecturas">Filtrar lecturas</string>
    <string name="estimar_lectura">Estimar lectura</string>
    <string name="impedir_lectura">Impedir lectura</string>
    <string name="re_imprimir">Reimprimir aviso cobranza</string>
    <string name="recordatorio_lector">Recordatorio lector</string>
    <string name="menu_medidor_entre_lineas">Medidor entre lineas</string>
    <string name="medidor_lbl">Medidor:</string>
    <string name="blank"></string>
    <string name="menu_configurar">Configurar servidor</string>
    <string name="menu_seleccionar_impresora">Seleccionar Impresora</string>
    <string name="menu_forzar_descarga">Forzar Descarga</string>
    <string name="menu_eliminar_datos">Eliminar Datos</string>
    <string name="agregado_el">Agregado el</string>
    <string name="a_las">a las</string>
    <string name="sample_desc_ord">INACCESIBILIDAD AL TERRENO O LUGAR</string>
    <string name="sample_nus">321233</string>
    <string name="sample_cuenta" tools:ignore="TypographyDashes">37-222-563-23</string>
    <string name="sample_num_medidor">6435122</string>
    <string name="sample_estado_medidor">Leída</string>
    <string name="sample_obs">84</string>
    <string name="sample_ruta">2222</string>
    <string name="sample_fecha">27/Mar/2014</string>
    <string name="sample_hora">18:05</string>
</resources>