<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_item_selec_impresora"
        android:icon="@drawable/config_impresora"
        app:showAsAction="ifRoom"
        android:title="@string/menu_seleccionar_impresora"/>
    <item
        android:id="@+id/menu_item_configurar"
        android:icon="@drawable/settings"
        android:title="@string/menu_configurar"/>
    <item
        android:id="@+id/menu_item_forzar_descarga"
        android:icon="@drawable/force_download"
        android:title="@string/menu_forzar_descarga"/>
    <item
        android:id="@+id/menu_item_eliminar_datos"
        android:icon="@drawable/borrar_datos"
        android:title="@string/menu_eliminar_datos"/>

</menu>