<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="11dp"
    android:paddingRight="11dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuPrincipal" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_below="@+id/separator_1" 
    android:layout_marginTop="10dp"
    android:layout_above="@+id/btn_salir" 
    android:layout_marginBottom="5dp"
    android:clickable="false">

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33" 
        android:clickable="false">


        <com.lecturas.elfec.controlador.accionesycustomizaciones.SquareButton
        android:id="@+id/btn_resumen_lecturas"
        custom:principalText="@string/resumen_lecturas_btn"
        custom:subText="@string/resumen_lecturas_btn_info"
        custom:bottomIcon="@drawable/resumen_lecturas"
        android:layout_width="0dp"
        android:layout_weight="0.33" 
        android:layout_height="fill_parent"
        android:onClick="btnResumenLecturasClick" />
        
        <com.lecturas.elfec.controlador.accionesycustomizaciones.SquareButton
        android:id="@+id/btn_tomar_lecturas"
        android:layout_width="0dp"
        android:layout_weight="0.66" 
        android:layout_height="fill_parent"
        custom:buttonBackground="@drawable/green_btn_default_holo_light"
        custom:bottomIcon="@drawable/tomar_lectura"
        custom:principalText="@string/tomar_lecturas_btn"
        custom:subText="@string/tomar_lecturas_btn_info"
        android:onClick="btnTomarLecturasClick" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33" 
        android:clickable="false">
        
       <com.lecturas.elfec.controlador.accionesycustomizaciones.SquareButton
        android:id="@+id/btn_detalle_impedidas"
         android:layout_width="0dp"
        android:layout_weight="0.33" 
        android:layout_height="fill_parent"
        custom:bottomIcon="@drawable/detalle_impedidas"
        custom:principalText="@string/detalle_impedidas_btn" 
        custom:subText="@string/detalle_impedidas_btn_info"
        android:onClick="btnDetalleImpedidasClick"  />

     <com.lecturas.elfec.controlador.accionesycustomizaciones.SquareButton
        android:id="@+id/btn_detalle_lecturas"
         android:layout_width="0dp"
        android:layout_weight="0.33" 
        android:layout_height="fill_parent"
        custom:bottomIcon="@drawable/detalle_lecturas"
        custom:principalText="@string/detalle_lecturas_btn"
        custom:subText="@string/detalle_lecturas_btn_info"
        android:onClick="btnDetalleLecturasClick" />

     <com.lecturas.elfec.controlador.accionesycustomizaciones.SquareButton
        android:id="@+id/btn_detalle_ordenativos"
        android:layout_width="0dp"
        android:layout_weight="0.33" 
        android:layout_height="fill_parent"
        custom:bottomIcon="@drawable/detalle_ordenativos"
        custom:principalText="@string/detalle_ordenativos_btn" 
        custom:subText="@string/detalle_ordenativos_btn_info"
        android:onClick="btnDetalleOrdenativosClick" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33" 
        android:clickable="false">
        
     <com.lecturas.elfec.controlador.accionesycustomizaciones.SquareButton
        android:id="@+id/btn_detalle_entre_lineas"
        android:layout_width="0dp"
        android:layout_weight="0.33" 
        android:layout_height="fill_parent"
        android:onClick="btnDetalleEntreLineasClick"
        custom:bottomIcon="@drawable/nuevo_medidor"
        custom:subText="@string/detalle_entre_lineas_btn_info"
        custom:principalText="@string/detalle_entre_lineas_btn" />
     <View
       android:layout_width="0dp"
        android:layout_weight="0.66" 
        android:layout_height="fill_parent"/>
    </LinearLayout>
</LinearLayout>
    <TextView
        android:id="@+id/lbl_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/titulo_menu_principal"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <View
        android:id="@+id/separator_1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lbl_titulo"
        android:background="@android:color/darker_gray" />
    <Button
        android:id="@+id/btn_salir"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="btnSalirClick"
        android:text="@string/salida_btn" />

</RelativeLayout>