<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_top_margin"
    tools:context=".Inicio"
    tools:ignore="UselessParent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_usuario_lbl"
            android:textAppearance="@style/TextAppearance.CustomFont.Light"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/lbl_nom_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.CustomFont.Light"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/lbl_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_fecha"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_imei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imei_lbl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbl_num_imei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_ruta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruta_lbl"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lbl_numero_ruta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/ruta_info_lbl"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_menu_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/go_main_menu"
            android:drawablePadding="4dp"
            android:drawableRight="@drawable/go_main_menu"
            android:enabled="false"
            android:onClick="btnMenuPrincipalClick"
            android:text="@string/menu_principal_btn" />

        <TextView
            android:id="@+id/lbl_menu_principal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/menu_principal_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_cargar_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/import_from_server"
                    android:enabled="false"
                    android:onClick="btnCargarDatosClick"
                    android:text="@string/cargar_datos_btn"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_descargar_datos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:drawableTop="@drawable/export_to_server"
                    android:enabled="false"
                    android:onClick="btnDescargarDatosClick"
                    android:text="@string/descargar_datos_btn"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_info_carga_datos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/info_datos_no_cargados_lbl"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>