<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/img_impresora"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/sample_obs"
        android:background="@color/gray_asbestos"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lbl_nombre_dispositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_impresora"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/img_impresora"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/img_impresora"
        android:text="@string/sample_desc_ord"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<RelativeLayout
    android:id="@+id/seccion_fecha"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/img_impresora"
    android:layout_marginTop="8dp" 
    android:visibility="gone">

    <TextView
        android:id="@+id/lbl_agregado_el"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/agregado_el"
        android:textColor="@color/blue_peter_river"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lbl_fecha_ord_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_agregado_el"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/lbl_agregado_el"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/sample_fecha"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lbl_a_las"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_agregado_el"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/lbl_fecha_ord_item"
        android:text="@string/a_las"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/blue_peter_river"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/lbl_hora_ord_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl_a_las"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/lbl_a_las"
        android:text="@string/sample_hora"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp"
        android:textStyle="bold" />
</RelativeLayout>
</RelativeLayout>
